<resources>
    <string name="app_name">Penal Code</string>
    <string name="i_am_admin">Admin</string>
    <string name="crime_number">Crime Number</string>
    <string name="crime_name">Crime Name</string>
    <string name="crime_description">Crime Description</string>
    <string name="add_crime">Add Crime</string>
    <string name="username">Username</string>
    <string name="bookmarks">FAVORITES</string>
    <string name="search">Search</string>
    <string name="traffic">Traffic</string>
    <string name="logout">Logout</string>
    <string name="not_admin">Not Admin</string>
    <string name="welcome_to_penal_code_uganda_app">Welcome To Penal Code Uganda App</string>
    <string name="sign_in">SIGN IN</string>
    <string name="admin_sign_in">ADMIN SIGN IN</string>
    <string name="msg_bookmarks">You Don\'t Have Any Bookmarks Yet</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="settings">Settings</string>
    <string name="close_settings">Close</string>
    <string name="update_settings">Update</string>
    <string name="change_photo">Change Photo</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="exit">Exit</string>
    <string name="send_feedback">Send Feedback</string>

    <string-array name="country_arrays">
        <item>Choose Country</item>
        <item>Bangladesh</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>
</resources>
