<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/go_to_bookmarks"
            android:title="@string/bookmarks" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/nav_search"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_traffic"
            android:icon="@drawable/nav_traffic"
            android:title="@string/traffic" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/nav_settings"
            android:title="@string/settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout1"
                android:title="@string/logout" />


</group>

</menu>
