<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_above="@id/input_group">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="SIGN IN"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fontFamily="sans-serif"
            android:text="@string/welcome_to_penal_code_uganda_app"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/input_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center">


        <EditText
            android:id="@+id/login_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_top"
            android:hint="Phone"
            android:inputType="phone"
            android:padding="15dp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bottom"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="15dp" />


        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="SIGN IN"
            android:textAllCaps="false"
            android:textColor="#FE5295"
            android:textSize="17sp"/>
        <com.rey.material.widget.CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/remember_me"
            style="@style/Material.Drawable.CheckBox"
            android:textColor="@android:color/white"
            app:cbd_strokeColor="@color/colorPrimary"
            android:gravity="center_vertical"
            android:layout_marginLeft="17dp"
            android:textStyle="bold"
            android:text="@string/remember_me"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/forget_password_link"
            android:text="@string/forgot_password"
            android:layout_marginLeft="20dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:fontFamily="sans-serif" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/admin_link"
            android:text="@string/i_am_admin"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
android:visibility="gone"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="3dp"
            android:padding="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/not_admin_link"
            android:text="@string/not_admin"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_marginEnd="20dp"
            android:visibility="gone"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="3dp"
            android:padding="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="7dp"
        android:id="@+id/line1">
        <TextView
            android:id="@+id/signUp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:padding="10dp"
            android:text="Don't Have an Account?  Sign Up"
            android:textAllCaps="true"
            android:textSize="13dp"
            android:textStyle="bold"
            android:textColor="#FAD0E1"
            android:fontFamily="sans-serif"/>


    </LinearLayout>
</RelativeLayout>