<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SettingsActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/appbar_settings"
        android:background="@color/colorPrimary">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar_settings">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/settings_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/close_settings"
                    android:textStyle="bold"
                    android:layout_alignParentStart="true"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:layout_alignParentLeft="true" />
                <TextView
                    android:id="@+id/update_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_settings"
                    android:textStyle="bold"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/settings_prof_pic"
        android:src="@drawable/profile"
        android:layout_below="@+id/appbar_settings"
        android:layout_marginTop="5dp"
        android:layout_centerInParent="true"/>
    <TextView
        android:id="@+id/change_photo_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_photo"
        android:textStyle="bold"
        android:layout_marginRight="12dp"
        android:layout_below="@+id/settings_prof_pic"
        android:layout_centerHorizontal="true"

        android:layout_marginEnd="10dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"/>
<EditText
    android:id="@+id/settings_inputPhone"
    android:layout_margin="12dp"
    android:layout_below="@+id/change_photo_settings"
    android:layout_marginTop="5dp"
    android:hint="Phone Number"
    android:inputType="phone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/settings_inputName"
        android:layout_margin="12dp"
        android:layout_below="@+id/settings_inputPhone"
        android:layout_marginTop="5dp"
        android:hint=" Name"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>